--- a/marketing_ko.html
+++ b/marketing_ko.html
@@ -103,8 +103,8 @@
             <h2>키캡 검색의 새로운 경험</h2>
             <p>색상과 이름으로 555개 이상의 키캡을 검색하세요</p>
             <div class="app-badges">
-                <a href="#" class="badge">App Store에서 다운로드</a>
-                <a href="#" class="badge">Google Play에서 다운로드</a>
+                <a href="https://apps.apple.com/us/app/cap-finder/id6755984152" class="badge" target="_blank" rel="noopener noreferrer">App Store에서 다운로드</a>
+                <a href="https://play.google.com/store/apps/details?id=com.gmk.gmk_keycap_finder" class="badge" target="_blank" rel="noopener noreferrer">Google Play에서 다운로드</a>
             </div>
         </div>
 
