--- a/marketing_en.html
+++ b/marketing_en.html
@@ -103,8 +103,8 @@
             <h2>A New Experience in Keycap Search</h2>
             <p>Search for over 555 keycaps by color and name</p>
             <div class="app-badges">
-                <a href="#" class="badge">Download on App Store</a>
-                <a href="#" class="badge">Get it on Google Play</a>
+                <a href="https://apps.apple.com/us/app/cap-finder/id6755984152" class="badge" target="_blank" rel="noopener noreferrer">Download on App Store</a>
+                <a href="https://play.google.com/store/apps/details?id=com.gmk.gmk_keycap_finder" class="badge" target="_blank" rel="noopener noreferrer">Get it on Google Play</a>
             </div>
         </div>
 
